# bedrock-demo

./: .gitignore  CLAUDE.md  README.md
agent/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
agent/docs/: architecture.md
agent/scripts/: fetch_skills.sh
agent/src/order_triage/: __init__.py  agent.py  config.py  gateway.py  identity.py  memory.py  runtime.py  skill_loader.py  spec.py
agent/src/order_triage/tools/: __init__.py  knowledge.py  ontology.py  skills.py
agent/tests/: conftest.py  test_agent_tools.py  test_identity.py  test_request_metadata.py  test_spec.py  test_stream_steps.py
infra/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
infra/bootstrap/: github_oidc.tf  main.tf  outputs.tf  versions.tf
infra/docs/: architecture.md  architecture_diagram.py  deployed-stack.md
infra/docs/adr/: 0001-user-impersonation-obo.md  0002-agentcore-memory-activation.md  0003-bedrock-guardrail.md  0004-observability-finops.md  0005-online-evaluations.md  0006-gateway-role-least-privilege.md  0007-actor-resolution.md  0008-semantic-view-cortex-analyst.md  0009-snowflake-function-url-direct-call-hardening.md  0010-sap-orders-native-lambda-targets.md
infra/docs/architecture/: README.md  _awsviz.py  agent-architecture.drawio  agent-architecture.md  architecture.drawio  data-plane-architecture.drawio  data-plane.md  devops-architecture.drawio  devops-architecture.md  end-to-end-architecture.drawio  end-to-end.md  evaluation-architecture.drawio  evaluation-architecture.md  generate.py  knowledge-architecture.drawio  knowledge-architecture.md  memory-architecture.drawio  memory-architecture.md  observability-architecture.drawio  observability-architecture.md  security-architecture.drawio  security-architecture.md  specs.json  system-overview-architecture.drawio  system-overview.md
infra/docs/playbooks/: cd-setup.md  deploy.md  entra-obo-setup.md  observability-impl-plan.md  snowflake-bootstrap.md
infra/docs/research/: agentcore-evals-strands-incompatibility.md  agentcore-gateway-functionurl-sigv4-403.md  audit-2026-06-21.md  finops-spike.md  handover-2026-06-23.md  observability-dashboard-audit.md  observability-phase3-research.md  observability-spike.md  snowflake-semantic-views-spike.md  spike-guardrails.md
infra/docs/research/agentcore-evals-evidence/: AGENTCORE-EVALS-STRANDS-INCOMPATIBILITY.html  _noimg.html  build_pdf.py  failure-flow.mmd
infra/entra/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/infra/: __init__.py  _common.py  deregister.py  preflight.py  register.py
infra/registry/: manifest.json
infra/scripts/: _demo_env.sh  apply_sql.py  destroy.sh  entra_provision.py  extoauth_spike.py  gen_bootstrap_admin.sh  ingest_kb.sh  prereqs.sh  seed_entra_secret.sh  seed_graph_secret.sh  snowflake_bootstrap.py  status.sh  tf.sh
infra/snowflake/: rls.sql  semantic_view.sql  setup.sql  smoke_test_user.sql  test_user.sql
infra/terraform/: .terraform.lock.hcl  cold_start.tf  gateway.tf  guardrail.tf  iam.tf  identity.tf  knowledge_base.tf  locals.tf  memory.tf  observability.tf  order_actions_lambda.tf  outputs.tf  policy.tf  registry.tf  runtime.tf  sap_lambda.tf  snowflake_lambda.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/modules/observability/: alarms.tf  (+11 more)
lib/: CLAUDE.md  Makefile  README.md  pyproject.toml
lib/src/agent_kit/: __init__.py  agent.py  app.py  config.py  prompt.py  spec.py  stream_steps.py
lib/tests/: conftest.py  test_coverage.py  test_identity.py  test_ontology.py  test_prompt.py  test_request_metadata.py  test_skill_loader.py  test_stream_steps.py
stubs/: .gitignore  CLAUDE.md  Makefile  README.md  build_lambdas.sh  pyproject.toml
stubs/docs/: build-and-deploy.md
stubs/order_actions_stub/: app.py  lambda_handler.py  openapi.json
stubs/sap_stub/: app.py  lambda_handler.py  openapi.json
stubs/snowflake_stub/: app.py  lambda_handler.py  openapi.json  snowflake_client.py
stubs/tests/: test_snowflake_obo.py  test_stubs.py
(+54 files in other folders)
