[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "order-triage-agent"
version = "0.1.0"
description = "Snowflake-backed Strands order-triage agent for Amazon Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.10,<3.13"
# The agent is a thin consumer of agent_kit: strands/boto3/pyyaml and the deploy extra all
# arrive transitively via agent-kit.
dependencies = ["agent-kit"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6.0"]

[tool.uv.sources]
agent-kit = { path = "../lib", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/order_triage"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
