[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrock-demo-infra"
version = "0.1.0"
description = "Terraform + registry/preflight for the order-triage AgentCore deployment"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]
# `make snowflake-setup` only — kept out of the default deps and the Lambda.
bootstrap = [
    "snowflake-connector-python>=3.12",
    "cryptography>=42.0",
    "pyjwt>=2.8",
]

[tool.hatch.build.targets.wheel]
packages = ["infra"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
