[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-kit"
version = "0.1.0"
description = "Agent-agnostic Strands + AgentCore runtime toolkit (infra + knowledge plumbing)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "strands-agents>=1.40.0",  # Bedrock model + Agent + MCP gateway client (pulls in mcp)
    "boto3>=1.35.0",           # Bedrock Knowledge Base retrieve
    "pyyaml>=6.0",             # skill-manifest frontmatter
]

[project.optional-dependencies]
# Installed in the AgentCore Runtime image of a consuming agent (see its Dockerfile).
deploy = [
    "bedrock-agentcore>=0.1.0",
    "aws-opentelemetry-distro>=0.10.0",
]
dev = ["pytest>=8.0", "ruff>=0.6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_kit"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
