[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrock-demo-stubs"
version = "0.1.0"
description = "Dummy SAP credit, order-actions, and Snowflake-orders stub services (AgentCore Gateway targets)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "mangum>=0.17.0",          # ASGI -> Lambda adapter
    "httpx>=0.27.0",           # order-actions fetches order status from the Snowflake data Lambda over HTTP
    "boto3>=1.34.0",           # snowflake_stub reads the key-pair secret from Secrets Manager
    "pyjwt>=2.8.0",            # snowflake_stub signs the Snowflake KEYPAIR_JWT
    "cryptography>=42.0.0",    # snowflake_stub loads the RSA private key
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6.0", "httpx>=0.27.0"]  # httpx powers fastapi TestClient

[tool.hatch.build.targets.wheel]
packages = ["sap_stub", "order_actions_stub", "snowflake_stub"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
